--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -9,19 +9,479 @@
     --grey: #f1f4f9;
 }
 
-.gallery-img img{
+
+/* Case Studies Section  */
+
+.case-studies-section {
+    width: 100%;
+    height: auto;
+    margin-bottom: 5%;
+    position: relative;
+    padding: 2%;
+    overflow: hidden;
+}
+
+.case-studies-container {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.case-studies-container .case-box-container {
+    width: 47%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    padding: 2%;
+    position: relative;
+    z-index: 1;
+}
+
+
+.case-studies-container .case-box-container a {
+    width: 100%;
+    margin-bottom: 3%;
+    margin-top: 3%;
+    text-decoration: none;
+
+}
+
+.case-studies-container .case-box-container a img {
     width: 100%;
     height: 100%;
+    border-radius: 30px;
     object-fit: cover;
 }
 
-.gallery-title h5{
-    color: var(--color);
+
+.case-studies-container .case-box-container a:hover {
+    filter: drop-shadow(0 0 10px var(--color));
+}
+
+.case-studies-container .case-box-container a:hover img {
+    scale: 1.2;
+}
+
+.case-studies-container .case-box-container a .case-boxs {
+    width: 100%;
+    height: 100%;
+}
+
+.case-studies-container .case-box-container a .case-boxs .case-boxs-img {
+    width: 100%;
+    height: 60%;
+    margin-bottom: 2%;
+    margin-top: 3%;
+    border-radius: 30px;
+    overflow: hidden;
+}
+
+
+
+.case-studies-container .case-box-container:nth-child(1) a {
+    width: 100%;
+    height: 600px;
+}
+
+.case-studies-container .case-box-container:nth-child(2) a {
+    width: 100%;
+    height: 600px;
+}
+
+.case-studies-container .case-box-container:nth-child(2) .case-projects-details {
+    width: 100%;
+    height: 100px;
+    margin-bottom: 2%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: black;
+    filter: drop-shadow(0 0 10px var(--color));
+    border-radius: 30px;
+    gap: 10px;
+}
+
+.case-studies-container .case-box-container:nth-child(2) .case-projects-details .case-projects-num {
+    font-size: 25px;
     font-weight: 900;
+    color: var(--color);
+}
+
+
+.case-studies-container .case-box-container:nth-child(2) .case-projects-details .case-prject-details {
+    font-size: 25px;
+    font-weight: 900;
+    color: var(--white);
+}
+
+.case-content {
+    width: 100%;
+    height: auto;
+    margin-bottom: 2%;
+}
+
+
+
+.case-content .case-title {
+    width: 100%;
+    height: auto;
+    display: flex;
+    gap: 20px;
 
 }
 
-.gallery-title h2{
-    color: var(--dBlue);
-    font-weight: 900;
+.case-content .case-title .case-services {
+    padding: 1% 2%;
+    background-color: var(--color);
+    color: var(--white);
+    border-radius: 20px;
+}
+
+.case-content .case-title .case-industries {
+    padding: 1% 2%;
+    color: var(--gray);
+}
+
+.case-heading {
+    margin-top: 3%;
+}
+
+
+/* Case Details  */
+
+.case-details {
+    margin-bottom: 5%;
+}
+
+.case-details-content h2 span {
+    color: var(--color);
+}
+
+.case-details-content p {
+    font-size: 17px;
+    font-weight: 100;
+}
+
+.case-details-content p span {
+    color: var(--color);
+}
+
+.case-images {
+    width: 100%;
+    height: auto;
+    margin-bottom: 5%;
+    position: relative;
+
+}
+
+.case-images-container {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    z-index: 1;
+}
+
+.case-images-container img {
+    width: 47%;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    border-radius: 10px;
+}
+
+.case-images-container img:hover {
+    filter: drop-shadow(0 0 10px var(--color));
+    cursor: pointer;
+}
+
+/* Goal and Objectives  */
+
+.goal-objective-section {
+    width: 100%;
+    height: auto;
+    position: relative;
+    margin-bottom: 5%;
+
+}
+
+.goal-objective-container {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.goal-objective-container .goal-objectives-title {
+    width: 47%;
+}
+
+.goal-objective-container .goal-objectives-title h5 {
+    color: var(--color);
+}
+
+.goal-objective-container .goal-objectives-title img {
+    width: 100%;
+    border-radius: 10px;
+    margin-top: 4%;
+}
+
+.goal-objective-container .goal-objective-content {
+    width: 47%;
+}
+
+.goal-objective-details {
+    width: 100%;
+    height: 150px;
+    display: flex;
+    justify-content: space-between;
+    padding: 2%;
+    align-items: center;
+}
+
+.goal-objective-details:hover {
+    cursor: vertical-text;
+}
+
+.goal-objective-details:hover .goal-objective-num span {
+    filter: drop-shadow(0 0 10px var(--color));
+}
+
+.goal-objective-details .goal-objective-num {
+    width: 17%;
+    color: var(--color);
+}
+
+.goal-objective-details .goal-objective-cBox {
+    width: 80%;
+}
+
+@media screen and (max-width:500px) {
+    .case-buttons {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+
+    .case-images-container {
+        width: 100%;
+        height: auto;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+    }
+
+    .case-images-container img {
+        width: 100%;
+        height: auto;
+        display: flex;
+        justify-content: space-between;
+        border-radius: 10px;
+        margin-bottom: 3%;
+    }
+}
+
+@media screen and (max-width:991px) {
+    .case-studies-container {
+        width: 100%;
+        height: auto;
+        display: flex;
+        justify-content: space-between;
+
+        flex-direction: column;
+    }
+
+    .case-studies-container .case-box-container {
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        padding: 2%;
+        position: relative;
+        z-index: 1;
+    }
+
+}
+
+@media screen and (max-width:800px) {
+    .goal-objective-container {
+        width: 100%;
+        height: auto;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+    }
+
+    .goal-objective-container .goal-objectives-title {
+        width: 100%;
+    }
+
+    .goal-objective-container .goal-objective-content {
+        width: 100%;
+    }
+
+    .goal-objective-details {
+        width: 100%;
+        height: 150px;
+        display: flex;
+        justify-content: space-between;
+        padding: 2%;
+        align-items: center;
+    }
+
+}
+
+/* Case Studies Link  */
+.url-section {
+    width: 100%;
+    height: auto;
+    margin-bottom: 5%;
+}
+
+.url-container {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.url-boxs {
+    width: 47%;
+    height: auto;
+    display: flex;
+    margin-bottom: 3%;
+    padding: 2%;
+    align-items: center;
+    /* From https://css.glass */
+    background: rgba(255, 255, 255, 0.11);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
+    border: 1px solid rgba(255, 255, 255, 1);
+}
+
+.url-boxs .url-icons {
+    width: 10%;
+    height: auto;
+
+}
+
+.url-boxs .url-icons i {
+    color: var(--color);
+    font-size: 20px;
+}
+
+.url-content {
+    width: 80%;
+    height: auto;
+}
+
+.url-content p {
+    margin-bottom: 0;
+}
+
+.url-content p a {
+    padding-left: 3% !important;
+    text-decoration: none;
+    color: var(--color);
+}
+
+
+@media screen and (max-width:650px) {
+
+    .url-boxs {
+        width: 100%;
+        height: auto;
+        display: flex;
+        margin-bottom: 3%;
+        padding: 2%;
+        align-items: center;
+        /* From https://css.glass */
+        background: rgba(255, 255, 255, 0.11);
+        border-radius: 16px;
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+        backdrop-filter: blur(20px);
+        -webkit-backdrop-filter: blur(20px);
+        border: 1px solid rgba(255, 255, 255, 1);
+    }
+}
+
+.problem-case-section {
+    width: 100%;
+    height: auto;
+    margin-bottom: 5%;
+    position: relative;
+}
+.problem-case-container {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 10px;
+}
+.problem-case-title {
+    width: 100%;
+    height: auto;
+    text-align: center;
+    color: var(--color) !important;
+    margin-bottom: 3%;
+}
+.problem-case-title h2{
+    color: var(--color) !important;
+}
+.problem-case-title h2 span{
+    padding: 0.5% 2%;
+    position: relative;
+}
+.problem-case-title h2 span::after{
+    content: "";
+    position: absolute;
+    width: 30%;
+    height: 100%;
+    right: 0;
+    top: 0;
+    border: 5px solid var(--white);
+    border-left: none;
+    border-radius: 5px;
+    
+}
+.problem-case-content {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+}
+.problem-content-boxs {
+    width: 45%;
+    height: auto;
+
+}
+
+.problem-case-container p{
+    text-align: center;
+}
+.problem-content-boxs p{
+    text-align: start;
+    font-weight: 100 !important;
+}
+
+@media screen and (max-width:600px) {
+    .problem-content-boxs {
+        width: 100%;
+        height: auto;
+    
+    }
+    
+    .problem-case-container p{
+        text-align: start;
+    }
 }
