--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -90,6 +90,8 @@
     height: 600px;
 }
 
+
+
 .case-studies-container .case-box-container:nth-child(2) .case-projects-details {
     width: 100%;
     height: 100px;
@@ -304,6 +306,19 @@
         position: relative;
         z-index: 1;
     }
+
+    
+.case-studies-container .case-box-container:nth-child(1) a {
+    width: 100%;
+    height: auto;
+}
+
+.case-studies-container .case-box-container:nth-child(2) a {
+    width: 100%;
+    height: auto;
+}
+
+
 
 }
 
